--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -20,6 +20,7 @@ $main-color:rgba(102, 51, 153,1);
     right: 15px;
     position: fixed;
     margin-top: 50px;
+    opacity:0.8;
     i{
         text-align: center;
         font-size: 40px;
