--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,8 +2,8 @@
 
   <li><a onclick="toggleUserMenu()">PROFIL <i class="fa fa-user"></i></a>
   <li><a href="<%=root_path%>">CARTE <i class="fa fa-map"></i></a>
-  <li><a href="#">LISTE <i class="fa fa-list"></i></a>
-  <li><a href="#">PARAMÈTRES <i class="fa fa-cog"></i></a>
+  <li><a href="<%=list_path%>">LISTE <i class="fa fa-list"></i></a>
+  <li><a onclick="toggleSettingsMenu()">PARAMÈTRES <i class="fa fa-cog"></i></a>
 
 
 </div>
@@ -12,7 +12,7 @@
   
   <li><a onclick="toggleUserMenu()"><i class="fa fa-user"></i></a>
   <li><a href="<%=root_path%>"><i class="fa fa-map"></i></a>
-  <li><a href="#"><i class="fa fa-list"></i></a>
+  <li><a href="<%=list_path%>"><i class="fa fa-list"></i></a>
   <li><a onclick="toggleSettingsMenu()"><i class="fa fa-cog"></i></a>
 
 </div>
