--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -31,9 +31,12 @@ $main-color:rgba(102, 51, 153,1);
         margin-top:100px;   
       }
   }
-.add_places{
-    padding:5px;
+
+#find{
+    width: 30%;
 }
+
+
 /* Button Submit */
 input[type=submit] {
     border: none;
@@ -43,7 +46,7 @@ input[type=submit] {
     color: white;
     background-color: #00b894;
     height: 40px;
-    width:80%;
+    //width:80%;
 }
 /* Bouton des shared links de devise */
 .connect{
@@ -60,7 +63,6 @@ input[type=submit] {
     a{
         text-decoration: none;
         color:white;
-        
     }
 }
   /*******************************/
@@ -72,29 +74,29 @@ input[type=submit] {
     border-radius: 10px;
     margin-top: 150px;
     margin-left: 4px;
-    //height: 250px;
     max-width: 100%;
     min-width: 98%;
     z-index: 10000;
     -webkit-box-shadow: 6px 7px 5px 0px rgba(0,0,0,0.36);
     -moz-box-shadow: 6px 7px 5px 0px rgba(0,0,0,0.36);
     box-shadow: 6px 7px 5px 0px rgba(0,0,0,0.36);
-        /*  jordane*/
-        color:rgba(47, 18, 76, 0.9);
-        display: block;
-        padding-top: 30px;
-        text-align: center;
+    color:rgba(47, 18, 76, 0.9);
+    display: block;
+    padding-top: 30px;
+    text-align: center;
+    height:auto;
     
 }
 
     textarea{
-        height: 25px;
+        height: 60px;
         border: none;
         border-width:1px;  
         border-bottom-style:ridge;
         border-color: $main-color;
         width:80%;
         margin-bottom: 20px;
+        line-height: 4;
     }
 
 @media screen and (min-width: 801px) {
@@ -102,7 +104,7 @@ input[type=submit] {
         min-width:800px!important;
         margin-left: 20%;
         margin-top: 17%;
-        height: 300px;
+        height: auto;
      }  
   }
 
