Oh naaan jité sur master <3

--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -103,8 +103,7 @@ input[type=submit] {
         min-width:800px!important;
         margin-left: 20%;
         margin-top: 17%;
-        height: 300px;
-     }  
+        height: 300px;     }  
   }
 
 /****** MENU DEROULANT USER ******/
