translated in French ouaaii

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,7 +3,7 @@
   <%= image_tag("photos/purple(2).jpg") %>
   <div class="form_connection">
   <h2>Mot de passe oublié ?</h2>
-<h4><i>Réinitialiser mon mot de passe par mail :</i></h4>
+<h4><i>Réinitialiser mon mot de passe par email :</i></h4>
 
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
