--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -15,7 +15,7 @@ let masuperfonction =  function() {
 
 /* ----------------------------------------------------------------- */
 // Cree la map 
-let mymap = L.map('mapid').setView([51.505, -0.09], 13);
+let mymap = L.map('mapid').setView([48.866667,2.333333], 13);
 let timestamp = new Array; 
 
 let layer = L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
