--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -49,7 +49,7 @@
       <% end %>
 
     <!-- <h3>Supprimer mon compte</h3> -->
-    <p>Nous quitter ? <%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Etes-vous sûr(e)?" }, method: :delete, id: "delete" %></p>
+    <%= link_to "Supprimer mon compte ?", registration_path(resource_name), data: { confirm: "Etes-vous sûr(e)?" }, method: :delete, id: "delete" %>
   </div>
 </div>
 
