--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -6,20 +6,7 @@
 <%else%>
 <%end%>
 
-<!-- DEBUT FENETRE MODALE -->
-<div id="modal-add-shop" style="display:none;">
-  <div class="form-modale">
-    <h2>Ajouter une boutique</h2>
-    <hr class="style13">
-    <%= form_tag do  %>
-      Nom de la boutique: </br> <%= text_field_tag(:name, '', placeholder: 'Nom de la boutique') %> <br>
-      Description de la boutique: <br> <%= text_area_tag(:description, nil, placeholder: 'Description')%> <br>
-      Adresse de la boutique: </br> <%= text_field_tag(:address, nil, placeholder: 'Some text') %> <br>
-      <%= submit_tag"Ajouter", :class => "add_places", :id => "add" %> 
-  <% end %>
-  </div>
-</div>
-<!-- FIN DE LA FENETRE MODALE -->
+<%= render 'layouts/modale'%>
 
 <div id='mapid'></div>
 
