--- a/app/views/layouts/_settingsMenu.html.erb
+++ b/app/views/layouts/_settingsMenu.html.erb
@@ -1,4 +1,5 @@
 <div class="user-menu" id="settings-user" style="display:none" >
+<%= render 'layouts/closecross'%>
         <h2 style="text-align:center;font-size:60px; float: none;margin-right:0%;margin-bottom:-10px;"><i class="fa fa-cog"></i></h2>
         
     
