--- a/app/views/layouts/_userMenu.html.erb
+++ b/app/views/layouts/_userMenu.html.erb
@@ -1,10 +1,11 @@
 <div class="user-menu" id="menu-user" style="display:none" >
+<%= render 'layouts/closecross'%>    
+    <%=image_tag("photos/purple(1).jpg", class: "profile-pic")%>   
     <% if user_signed_in? %>
       <h2 style = "text-align:center"><i>Salut <%= current_user.username.capitalize%> !</i></h2>
       <%else%>
        <h2><i>Bienvenue</i></h2>
     <%end%>
-    <%=image_tag("photos/purple(1).jpg", class: "profile-pic")%>   
 
     <hr class="style14">
     <% if user_signed_in? %>
