--- a/app/views/layouts/_modale.html.erb
+++ b/app/views/layouts/_modale.html.erb
@@ -2,6 +2,7 @@
 <button class="add" onclick="toggleModal()"><i class="fa fa-plus"></i></button>
 <!-- DEBUT FENETRE MODALE -->
 <div id="modal-add-shop" style="display:none;">
+<%= render 'layouts/closecross'%>    
   <div class="form-modale">
     <h2>Ajouter une boutique</h2>
     <hr class="style13">
