--- a/app/views/map/created.html.erb
+++ b/app/views/map/created.html.erb
@@ -12,8 +12,8 @@
             <h3>Nom de la boutique :<%= fiche.name %> </h3>
             <hr>
             <i>Adresse : <%= fiche.address %> </i>
-            <b><%= fiche.average_price %></b>
-            <p class="shop_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam elementum libero non lacus laoreet ultrices in viverra nibh. Phasellus eu lectus ipsum. Proin eget leo porta, porttitor felis ut, commodo nisl. Pellentesque vitae convallis erat. Integer sit amet porttitor dolor. Mauris mollis bibendum tortor, sit amet vulputate dui.</p>
+            <p>Description : <%= fiche.description %> </p>
+            <!-- <b>Prix moyen : <%= fiche.average_price %></b> -->
         </div>
       <%end%>
 
