link to createdpage added

--- a/app/views/layouts/_userMenu.html.erb
+++ b/app/views/layouts/_userMenu.html.erb
@@ -9,6 +9,8 @@
 
     <hr class="style14">
     <% if user_signed_in? %>
+     <%= link_to created_path do%> MES BOUTIQUES <%end%> 
+      <hr class="style13">
       <%= link_to edit_user_registration_path do%> EDITER MON PROFIL <%end%> 
       <hr class="style13">
       <a>MES BOUTIQUES</a>
