--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:200,700' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => "reload" %>
+    	<%= favicon_link_tag asset_path('logo.png'), :rel => 'icon', :type =>  'image/png' %>
+
   </head>
   <body>
 
