--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -14,7 +14,11 @@ let masuperfonction =  function() {
         }}})});};
 
 /* ----------------------------------------------------------------- */
-// Cree la map 
+// Cree la map
+let pos = new Array;
+
+
+
 let mymap = L.map('mapid').setView([48.866667,2.333333], 14);
 let timestamp = new Array; 
 
