--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -10,20 +10,43 @@ $main-color-opacity:rgba(102, 51, 153,0.8);
     width: 100%;
     display: flex;
     font-size: 14px;
+    z-index: 2;
     
 }
-
-ul, li {
+.row{
+    display: inline-block;
+    margin-left: 15px;
+    width: 35%;
+}
+// LIENS
+li {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
+// NEWSLETTER
+.input{
+        border: none;
+        border-width: 1px;
+        border-bottom-style: ridge;
+}
+#subscribe{
+    background-color: $main-color;
+    border: none;
+    color: white;
+    padding: 5px 8px;
+    text-decoration: none;
+    font-size: 12px;
+    margin: 4px 2px;
+    cursor: pointer;
+    margin-left: 20%;
+    margin-bottom: 5px;
+}
 
+// COPYRIGHT
 #copyright{
     font-size: 12px; 
+    margin-left: 40%;
+    z-index: 1;
     display: flex;
-}
-.row{
-    display: inline-block;
-    width: 35%;
 }
