--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,9 +15,8 @@
             <p><b>Newsletter</b></p>
             <form>                 
                 <div class="mailer">
-                    <input class="input" type="text" name="email" placeholder="email@example.com">
+                    <input class="input" type="text" name="email" placeholder="email@example.com"><button name="button" id="subscribe">S'inscrire</button>
                 </div>
-                    <button name="button" id="subscribe">S'inscrire</button>
             </form>
         </div>
     </div>
