reste sur cette branche connard

--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -1,5 +1,17 @@
 
 
+
+
+if(navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showLocation, errorHandler);
+}
+else {
+    alert('Votre navigateur ne prend malheureusement pas en charge la géolocalisation.');
+}
+
+
+
+
 let masuperfonction =  function() {
   bound = mymap.getBounds();
   $.ajax({url: "/", type: 'POST', data: 'Nlat=' + bound.getNorth() + "&Nlong=" + bound.getWest() + "&Slat=" + bound.getSouth() + "&Slong=" + bound.getEast() + '&test1=' + mymap.getCenter().lat + '&test2=' + mymap.getCenter().lng  , dataType: 'JSON', body: 'rendu', complete: ( 
