--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -17,7 +17,7 @@ let masuperfonction =  function() {
 // Cree la map
 let pos = new Array;
 
-let mymap = L.map('mapid').setView([userLoc[0],userLoc[1]], 14);
+let mymap = L.map('mapid').setView([48.866667, 2.333333], 14);
 let timestamp = new Array; 
 let layer = L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
   attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
