--- a/app/views/layouts/_modale.html.erb
+++ b/app/views/layouts/_modale.html.erb
@@ -7,7 +7,7 @@
     <hr class="style13">
       Nom de la boutique: </br> <%= text_field_tag(:name, '', placeholder: 'Nom de la boutique') %> <br>
       Description de la boutique: <br> <%= text_area_tag(:description, nil, placeholder: 'Description')%> <br>
-      Adresse de la boutique: </br> <%= text_field_tag(:address, nil, placeholder: 'Some text') %> <br>
+      Adresse de la boutique: </br> <%= text_field_tag(:address, nil, placeholder: "Saisir l\'adresse") %> <br>
       <%= submit_tag"Ajouter", :class => "add_places", :id => "add" %> 
   </div>
 </div>
