--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,17 @@
 <div class="navbar" id="navbar">
   <li><a onclick="toggleUserMenu()">PROFIL <i class="fa fa-user"></i></a>
   <li><a href="<%=root_path%>">CARTE <i class="fa fa-map"></i></a>
-  <li><a href="<%=list_path%>">LISTE <i class="fa fa-list"></i></a>
+  <!-- <li><a href="<%=list_path%>">LISTE <i class="fa fa-list"></i></a> -->
+  <li><a href="<%=created_path%>">MES BOUTIQUES <i class="fa fa-list"></i></a> 
+
   <li><a onclick="toggleSettingsMenu()">PARAMÈTRES <i class="fa fa-cog"></i></a>
 </div>
 
 <div class="navbar-mobile" id="navbar">
   <li><a onclick="toggleUserMenu()"><i class="fa fa-user"></i></a>
   <li><a href="<%=root_path%>"><i class="fa fa-map"></i></a>
-  <li><a href="<%=list_path%>"><i class="fa fa-list"></i></a>
+ <!-- <li><a href="<%=list_path%>"><i class="fa fa-list"></i></a> -->
+ <li><a href="<%=created_path%>"><i class="fa fa-list"></i></a>
   <li><a onclick="toggleSettingsMenu()"><i class="fa fa-cog"></i></a>
 </div>
 <style>
