--- a/app/views/map/list.html.erb
+++ b/app/views/map/list.html.erb
@@ -10,16 +10,16 @@
       <i class="fa fa-location-arrow"></i>
         <h3><%=fact.name%></h3>
         <hr>
-        <p class="shop_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam elementum libero non lacus laoreet ultrices in viverra nibh. Phasellus eu lectus ipsum. Proin eget leo porta, porttitor felis ut, commodo nisl. Pellentesque vitae convallis erat. Integer sit amet porttitor dolor. Mauris mollis bibendum tortor, sit amet vulputate dui.</p>
+        <p class="shop_body"><%=fact.description%></p>
         <p><%=fact.address%></p>
-        <p>Proposé par : </p>
+        <p>Proposé par : <%=fact.creator%>
 
     </div>
     
 <% end %>
     <div id="list_show">
       <i class="fa fa-location-arrow"></i>
-        <h3>Nom de la boutique</h3>
+        <h3>Nom Test</h3>
         <hr>
         <p class="shop_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam elementum libero non lacus laoreet ultrices in viverra nibh. Phasellus eu lectus ipsum. Proin eget leo porta, porttitor felis ut, commodo nisl. Pellentesque vitae convallis erat. Integer sit amet porttitor dolor. Mauris mollis bibendum tortor, sit amet vulputate dui.</p>
 
