--- a/app/views/map/created.html.erb
+++ b/app/views/map/created.html.erb
@@ -6,7 +6,7 @@
   <div id='liste'>
     <%= image_tag("photos/purple(2).jpg", class: "img-bg") %>
     
-    <% current_user.places.each do |fiche| %>
+    <% current_user.places.each.reverse do |fiche| %>
         <div id="list_show">
           <i class="fa fa-location-arrow"></i>
             <h3>Nom de la boutique :<%= fiche.name %> </h3>
