--- a/app/views/map/created.html.erb
+++ b/app/views/map/created.html.erb
@@ -12,7 +12,7 @@
             <h3><%= fiche.name %> </h3>
             <hr>
             <p>Adresse : <%= fiche.address %> </p>
-            <p>Description : <%= fiche.description %> <p><%= link_to "Delete", place_path(@places),:data => {:confirm => "You sure?",:method => "delete"} %></p></p>
+            <p>Description : <%= fiche.description %> </p>
 
         </div>
       <%end%>
