--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -32,9 +32,14 @@ let masuperfonction = function() {
         if (timestamp.includes(local["created_at"]) != true ) {
           timestamp.push(local["created_at"]);
           let place = new L.latLng(local.latitude, local.longitude);
-          let myIcon = new L.icon({ iconUrl: "<%= asset_path("douge.png") %>" , iconSize: [45, 50] });
+          let myIcon = new L.icon({ iconUrl: "<%= asset_path("douge.png") %>" , iconSize: [45, 50], popupAnchor: [25 ,75]});
           let marker = new L.Marker(place, {icon: myIcon, autoPan: true});
+          marker.bindPopup("Nique bien ta mere");
+          $(marker).click(function() {
+          this.openPopup();
+          });
           marker.addTo(mymap);
+          debugger;
         }}})});}
 
 /* ----------------------------------------------------------------- */
