--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
   <li><a onclick="toggleUserMenu()">PROFIL <i class="fa fa-user"></i></a>
   <li><a href="<%=root_path%>">CARTE <i class="fa fa-map"></i></a>
   <!-- <li><a href="<%=list_path%>">LISTE <i class="fa fa-list"></i></a> -->
-  <% if user_sign_in? %>
+  <% if user_signed_in? %>
     <li><a href="<%=created_path%>">MES BOUTIQUES <i class="fa fa-list"></i></a> 
   <%end%>
   <li><a onclick="toggleSettingsMenu()">PARAMÈTRES <i class="fa fa-cog"></i></a>
@@ -12,7 +12,7 @@
   <li><a onclick="toggleUserMenu()"><i class="fa fa-user"></i></a>
   <li><a href="<%=root_path%>"><i class="fa fa-map"></i></a>
  <!-- <li><a href="<%=list_path%>"><i class="fa fa-list"></i></a> -->
-  <% if user_sign_in? %>
+  <% if user_signed_in? %>
    <li><a href="<%=created_path%>"><i class="fa fa-list"></i></a>
   <%end%>
   <li><a onclick="toggleSettingsMenu()"><i class="fa fa-cog"></i></a>
