--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -34,7 +34,7 @@ let masuperfonction = function() {
           let place = new L.latLng(local.latitude, local.longitude);
           let myIcon = new L.icon({ iconUrl: "<%= asset_path("pin-mark.png") %>" , iconSize: [45, 50] });
           let marker = new L.Marker(place, {icon: myIcon, autoPan: true});
-          marker.bindPopup("Nique bien ta mere");
+          marker.bindPopup(`${local.name}\n`+`${local.address}`);
           $(marker).click(function() {
           this.openPopup();
           });
