--- a/app/views/map/created.html.erb
+++ b/app/views/map/created.html.erb
@@ -1,3 +1,6 @@
+<!-- Page qui regroupe tous les shops créés -->
+
+
 <%= render 'layouts/navbar'%>
 
 <%= render 'layouts/modale'%>
@@ -22,4 +25,3 @@
   </div>
     
 </div>
-'/created',
