--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
 
 <div class="navbar-mobile" id="navbar">
   <li><a onclick="toggleUserMenu()"><i class="fa fa-user"></i></a>
-  <li><a href="<%=root_path%>"><i class="fa fa-map"></i></a>
+  <li><a href="/"><i class="fa fa-map"></i></a>
  <!-- <li><a href="<%=list_path%>"><i class="fa fa-list"></i></a> -->
   <% if user_signed_in? %>
    <li><a href="<%=created_path%>"><i class="fa fa-list"></i></a>
